# kairos-execution-engine

./: .env.example  Makefile  README.md  pyproject.toml
kairos_execution/: __init__.py  config.py  crypto.py  engine.py  factory.py  ratelimit.py  reason_router.py  service.py  state_machine.py  trailing.py
kairos_execution/adapters/: __init__.py  base.py  ccxt_adapter.py  evedex.py
tests/: test_crypto.py  test_engine.py  test_factory.py  test_ratelimit.py  test_reason_router.py  test_state_machine.py  test_trailing.py
